--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -375,14 +375,13 @@ input[type="password"]:focus {
     local("Recoleta"),
     url(/fonts/Recoleta-Medium.ttf) format("truetype");
 }
-body,
-html {
+body, html {
   background-color: #f5f5f5;
   font-family: Pixel;
-  height: 100vh !important;
+  height: 100% !important;
   min-height: 100%;
   overflow-x: hidden !important;
-  overflow-y: scroll !important;
+  overflow-y: auto !important; /* Changed from scroll to auto */
 }
 .bg-image {
   background-position: 50%;
